--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "How's the Weather?",
+  "name": "How does it feel?",
   "homepage_url": "http://localhost:8080/",
   "description": "It's makes much more sense to know what temperature it actually feels like, don't you think?",
   "default_locale": "en",
